--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GitHub Pages Example</title>
+    <title>Learn Hindi for free!</title>
   </head>
   <body>
-    <h1>Example of GitHub Pages project</h>
+    <h1>STEP ONE, pronouns</h>
   </body>
 </html>
