--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Learn Hindi for free!</title>
   </head>
   <body>
-    <h1>STEP ONE, pronouns</h>
+    <h1>STEP ONE, the letters</h>
+    <p>अ - uh, आ - aa, इ - ee, ई - eee, उ - oo, ऊ - ooo, ए - eh, ऐ - ai</p>
   </body>
 </html>
