--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>STEP ONE, the letters</h>
-    <p>अ - uh, आ - aa, इ - ee, ई - eee, उ - oo, ऊ - ooo, ए - eh, ऐ - ai</p>
+    <p>अ - uh, आ - aa, इ - ee, ई - eee, उ - oo, ऊ - ooo, ए - eh, ऐ - ai, ऋ - ri</p><br></br><p>क - ka, ख - kha, ग - g, घ - gha, च - cha, छ - chha, ज - ja, झ - jha</p>
   </body>
 </html>
