--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+      p {
+        font-size : 30px;
+        background-color : #cfc;
+        padding : 0;
+        margin : 0;
+        line-height : 20px;
+      }
+    </style>
     <title>Learn Hindi for free!</title>
   </head>
   <body>
