--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
     <h1>STEP ONE, the letters</h>
     <p>अ - uh, आ - aa, इ - ee, ई - eee, उ - oo, ऊ - ooo, ए - eh, ऐ - ai, ऋ - ri</p>
     <p>क - ka, ख - kha, ग - g, घ - gha, च - cha, छ - chha, ज - ja, झ - jha</p>
+    <p>त - ta, थ - tha, ट - Ta, ठ - Tha, द - da, ध - dha, ड - Da, ढ - Dha, न - na, ण - Na</p>
+    <p>प - pa, फ - pha, ब - ba, भ - bha, म - ma, य - ya, र - ra, ल - la, व - va</p>
+    <p>स - sa, श - sha, ष - Sha</p>
+    <p>क़ - qa, ख - Kha, ग़ - ga, ज़ - za, फ़ - fa, ड़ - ra, ढ़ - Rha</p>
   </body>
 </html>
