--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <h1>STEP ONE, the letters</h>
-    <p>अ - uh, आ - aa, इ - ee, ई - eee, उ - oo, ऊ - ooo, ए - eh, ऐ - ai, ऋ - ri, अं - an (blocked nose sound)</p>
+    <p>अ - uh, आ - aa, इ - ee, ई - eee, उ - oo, ऊ - ooo, ए - eh, ऐ - ai, ऋ - ri, अं - n (blocked nose sound)</p>
     <p>क - ka, ख - kha, ग - g, घ - gha, च - cha, छ - chha, ज - ja, झ - jha</p>
     <p>त - ta, थ - tha, ट - Ta, ठ - Tha, द - da, ध - dha, ड - Da, ढ - Dha, न - na, ण - Na</p>
     <p>प - pa, फ - pha, ब - ba, भ - bha, म - ma, य - ya, र - ra, ल - la, व - va</p>
@@ -21,8 +21,12 @@
     <p>क़ - qa, ख - Kha, ग़ - ga, ज़ - za, फ़ - fa, ड़ - ra, ढ़ - Rha</p>
     <br></br>
     <p>Now for a few examples!</p>
-    <p>Sun - Sa + ooo + ra  + ja = Suraj सूरज</p>
-    <p>Moon - Cha + aa + an + da = Chand चंद</p>
-    <p>Word - sha, ba, da - Shabd = शब्द</p>
+    <p>Sun - Sa + ooo + ra  + j = Suraj सूरज</p>
+    <audio>
+      <source>
+      </source>
+    </audio>
+    <p>Moon - Cha + aa + n + d = Chand चंद</p>
+    <p>Word - sha + ba + da - Shabd = शब्द</p>
   </body>
 </html>
