--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
     <br></br>
     <p>Now for a few examples!</p>
     <p>Sun - Sa + ooo + ra  + j = Suraj सूरज</p>
-    <audio>
-      <source>
-      </source>
+    <audio controls>
+      <source src="suraj.mp3" type="audio/mpeg">
     </audio>
     <p>Moon - Cha + aa + n + d = Chand चंद</p>
     <p>Word - sha + ba + da - Shabd = शब्द</p>
