--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <source src="suraj.mp3" type="audio/mpeg">
     </audio>
     <p>Moon - Cha + aa + n + d = Chand चंद</p>
+    <audio controls>
+      <source src="chand.mp3" type="audio/mpeg">
+    </audio>
     <p>Word - sha + ba + da - Shabd = शब्द</p>
   </body>
 </html>
