--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@
       <source src="chand.mp3" type="audio/mpeg">
     </audio>
     <p>Word - sha + ba + da - Shabd = शब्द</p>
+    <audio controls>
+      <source src="shabd.mp3" type="audio/mpeg">
+    </audio>
   </body>
 </html>
