--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p>प - pa, फ - pha, ब - ba, भ - bha, म - ma, य - ya, र - ra, ल - la, व - va</p>
     <p>स - sa, श - sha, ष - Sha</p>
     <p>क़ - qa, ख - Kha, ग़ - ga, ज़ - za, फ़ - fa, ड़ - ra, ढ़ - Rha</p>
+    <a href="https://omniglot.com/writing/hindi.htm">For more info C:</a>
     <br></br>
     <p>Now for a few examples!</p>
     <p>Sun - Sa + ooo + ra  + j = Suraj सूरज</p>
@@ -33,5 +34,6 @@
     <audio controls>
       <source src="shabd.mp3" type="audio/mpeg">
     </audio>
+  
   </body>
 </html>
