--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         line-height : 20px;
       }
     </style>
-    <title>Learn Hindi for free!</title>
+    <title><img src="Aum_Om_black.svg.png"></img>Learn Hindi for free!</title>
   </head>
   <body>
     <h1>STEP ONE, the letters</h>
-    <img src="Aum_Om_black.svg.png" alt="Om Shanti Om" width="75" height="75">
+<!--     <img src="Aum_Om_black.svg.png" alt="Om Shanti Om" width="75" height="75"> -->
     <p>अ - uh, आ - aa, इ - ee, ई - eee, उ - oo, ऊ - ooo, ए - eh, ऐ - ai, ऋ - ri, अं - n (blocked nose sound)</p>
     <p>क - ka, ख - kha, ग - g, घ - gha, च - cha, छ - chha, ज - ja, झ - jha</p>
     <p>त - ta, थ - tha, ट - Ta, ठ - Tha, द - da, ध - dha, ड - Da, ढ - Dha, न - na, ण - Na</p>
