--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         line-height : 20px;
       }
     </style>
-    <title><img src="Aum_Om_black.svg.png"></img>Learn Hindi for free!</title>
+    <title>Learn Hindi for free!</title>
+    <link rel="icon" type="image/gif/png" src="Aum_Om_black.svg.png">
   </head>
   <body>
     <h1>STEP ONE, the letters</h>
