--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       }
     </style>
     <title>Learn Hindi for free!</title>
-    <link rel="icon" type="image/gif/png" src="Aum_Om_black.svg.png">
+    <link rel="icon" type="image/gif/png" href="Aum_Om_black.svg.png">
   </head>
   <body>
     <h1>STEP ONE, the letters</h>
