--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style>
-      p {
-        font-size : 30px;
-        padding : 5;
-        margin : 5;
-        line-height : 20px;
-      }
-    </style>
     <title>Learn Hindi for free!</title>
     <link rel="icon" type="image/gif/png" href="Aum_Om_black.svg.png">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h1>STEP ONE, the letters</h>
