--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Learn Hindi for free!</title>
     <link rel="icon" type="image/gif/png" href="Aum_Om_black.svg.png">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   </head>
   <body>
     <h1>STEP ONE, the letters</h>
