--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <title>Learn Hindi for free!</title>
     <link rel="icon" type="image/gif/png" href="Aum_Om_black.svg.png">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
   </head>
   <body>
-    <h1>STEP ONE, the letters</h>
+    <h1 class = "a">STEP ONE, the letters</h>
 <!--     <img src="Aum_Om_black.svg.png" alt="Om Shanti Om" width="75" height="75"> -->
-    <p>अ - uh, आ - aa, इ - ee, ई - eee, उ - oo, ऊ - ooo, ए - eh, ऐ - ai, ऋ - ri, अं - n (blocked nose sound)</p>
+    <p class = "P">अ - uh, आ - aa, इ - ee, ई - eee, उ - oo, ऊ - ooo, ए - eh, ऐ - ai, ऋ - ri, अं - n (blocked nose sound)</p>
     <p>क - ka, ख - kha, ग - g, घ - gha, च - cha, छ - chha, ज - ja, झ - jha</p>
     <p>त - ta, थ - tha, ट - Ta, ठ - Tha, द - da, ध - dha, ड - Da, ढ - Dha, न - na, ण - Na</p>
     <p>प - pa, फ - pha, ब - ba, भ - bha, म - ma, य - ya, र - ra, ल - la, व - va</p>
@@ -30,7 +30,7 @@
     <audio controls>
       <source src="shabd.mp3" type="audio/mpeg">
     </audio>
-    <h1>PRONOUNS</h>
+    <h1 class = "c">PRONOUNS</h>
     <p>मैं - I</p>
   </body>
 </html>
