--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
   </head>
   <body>
-    <h1>STEP ONE, the letters</h>
+    <h1>STEP ONE, the letters</h1>
 <!--     <img src="Aum_Om_black.svg.png" alt="Om Shanti Om" width="75" height="75"> -->
     <p>अ - uh, आ - aa, इ - ee, ई - eee, उ - oo, ऊ - ooo, ए - eh, ऐ - ai, ऋ - ri, अं - n (blocked nose sound)</p>
     <p>क - ka, ख - kha, ग - g, घ - gha, च - cha, छ - chha, ज - ja, झ - jha</p>
@@ -30,7 +30,7 @@
     <audio controls>
       <source src="shabd.mp3" type="audio/mpeg">
     </audio>
-    <h1>STEP TWO, PRONOUNS</h>
+    <h1>STEP TWO, PRONOUNS</h1>
     <p>मैं - I</p>
   </body>
 </html>
