--- a/index.html
+++ b/index.html
@@ -30,7 +30,32 @@
     <audio controls>
       <source src="shabd.mp3" type="audio/mpeg">
     </audio>
+    <br></br>
     <h1>STEP TWO, PRONOUNS</h1>
     <p>मैं - I</p>
+    <p>तू - you (informal)</p>
+    <p>तुम - You</p>
+    <p>हम - We</p>
+    <p>आप - you (formal)</p>
+    <p>वे - They</p>
+    <p>जो - relative pronoun</p>
+    <br></br>
+    <h1>STEP THREE, VERB to be</h1>
+    <p>मैं हूँ - I am</p>
+    <p>तू है - You are (informal)</p>
+    <p>तुम हो - You are</p>
+    <p>हम हैं - We are</p>
+    <p>आप हैं - You are (formal)</p>
+    <p>वे हैं - They are</p>
+    <br></br>
+    <p>EXAMPLES</p>
+    <p>मैं यहाँ हूँ - I am here</p>
+    <p>तू वहाँ है - You are there</p>
+    <p>तुम कैसे हो? - How are you?</p>
+    <p>हम दुखी हैं - We are sad</p>
+    <p>आप खड़े हैं - You are standing</p>
+    <p>वे बैठे हैं - They are sitting</p>
+    <br></br>
+    <h1>STEP FOUR - VERBS</h1>
   </body>
 </html>
