--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <p>मैं यहाँ हूँ - I am here</p>
     <p>तू वहाँ है - You are there</p>
     <p>तुम कैसे हो? - How are you?</p>
-    <p>हम दुखी हैं - We are sad</p>
+    <p>हम दुखे हैं - We are sad</p>
     <p>आप खड़े हैं - You are standing</p>
     <p>वे बैठे हैं - They are sitting</p>
     <br></br>
