--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/gif/png" href="Aum_Om_black.svg.png">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+    <script src="functionality.js"></script>
   </head>
   <body>
     <h1>STEP ONE, the letters</h1>
